scrollbar fix?

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -234,6 +234,9 @@ h6 {
 
 main {
   margin-top: 92px;
+  max-width: 100%;
+  padding: 0;
+  overflow-x: hidden;
 }
 
 #intro .carousel-background {
